--- a/web-ui/src/main/resources/catalog/views/sextant/less/formatter.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/formatter.less
@@ -14,6 +14,7 @@
       }
       tr:first-child td {
         border: none;
+        padding-top: 0px;
       }
     }
     dt, dd {
